[gd_scene load_steps=4 format=3 uid="uid://bj0bhq1phdlkn"]

[ext_resource type="Script" path="res://scripts/belt_tile.gd" id="1_irkvd"]
[ext_resource type="Texture2D" uid="uid://c86wtgg3manc4" path="res://assets/temp_graphics/belt_tile.png" id="2_ddi5t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2uail"]
size = Vector2(16, 16)

[node name="BeltTile" type="Node2D"]
editor_description = "waw"
script = ExtResource("1_irkvd")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
rotation = -1.5708
texture = ExtResource("2_ddi5t")

[node name="MovementCollision" type="Area2D" parent="."]
collision_layer = 65536
collision_mask = 257

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovementCollision"]
shape = SubResource("RectangleShape2D_2uail")

[connection signal="body_entered" from="MovementCollision" to="." method="_on_movement_collision_body_entered"]
[connection signal="body_exited" from="MovementCollision" to="." method="_on_movement_collision_body_exited"]
